Openshift/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: flask-app-route
spec:
  to:
    kind: Service
    name: flask-app-service
  port:
    targetPort: 80
  tls:
    termination: edge
